[gd_scene load_steps=6 format=3 uid="uid://ie2m5n6k0qjg"]

[ext_resource type="Script" path="res://Scripts/Menus/InventoryPanel/ItemUsePanel.gd" id="1_c7w7n"]
[ext_resource type="Theme" uid="uid://dsowi08f2y6iv" path="res://Themes/rootTheme.tres" id="1_oq36k"]
[ext_resource type="Texture2D" uid="uid://p871kcr0eyx6" path="res://Graphics/SOUVUTU0.png" id="3_25v5m"]
[ext_resource type="Theme" uid="uid://dspb6mujs3bb2" path="res://Themes/titleTextTheme.tres" id="3_d1bpa"]

[sub_resource type="AtlasTexture" id="AtlasTexture_la3b7"]
atlas = ExtResource("3_25v5m")
region = Rect2(96, 56, 8, 8)

[node name="ItemUsePanel" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_oq36k")
script = ExtResource("1_c7w7n")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = 80.0
offset_right = 1200.0
offset_bottom = 880.0

[node name="ItemSpriteControl" type="Control" parent="Panel"]
anchors_preset = 0
offset_left = 105.0
offset_top = 24.0
offset_right = 169.0
offset_bottom = 88.0

[node name="ItemSprite" type="Sprite2D" parent="Panel/ItemSpriteControl"]
position = Vector2(32, 32)
scale = Vector2(4, 4)
texture = SubResource("AtlasTexture_la3b7")

[node name="ItemUsedTitle" type="RichTextLabel" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -350.0
offset_top = 24.0
offset_right = 350.0
offset_bottom = 74.0
grow_horizontal = 2
theme = ExtResource("3_d1bpa")
bbcode_enabled = true
text = "[center]Item Used - Item Name Goes Here[/center]"
fit_content = true

[node name="ItemUsedEffects" type="RichTextLabel" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 96.0
offset_right = -24.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
theme_override_font_sizes/italics_font_size = 24
theme_override_font_sizes/bold_italics_font_size = 24
theme_override_font_sizes/mono_font_size = 24
text = "The item was used, and these were the effects. For example, using a Potion would heal the user by some amount of HP. Just making sure the user knows that this is the effect! Flavor might also be appropriate here, especially for things like using Key Items."

[node name="OkButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -52.0
offset_right = 25.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 0
text = "OK"

[connection signal="pressed" from="Panel/OkButton" to="." method="_on_ok_button_pressed"]
